# quantitative-trading

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-paper-trade.yml
Chat Transcripts/: README.md  chat_20260421.md
docs/: REPORT.md
notebooks/reports/: investor_criteria_audit.ipynb
scripts/: build_dataset.py  build_investor_purchases.py  discover_investor_ciks.py  generate_audit_figures.py  modal_validate_weekly_strategy.py  report_paper_trading.py  run_backtest.py  run_investor_audit.py  run_weekly_paper_trade.py  smoke_test_edgar.py
src/quantitative_trading/: __init__.py  config.py
src/quantitative_trading/backtest/: __init__.py  engine.py  investor_audit_report.py  metrics.py
src/quantitative_trading/data/: __init__.py  edgar.py  insider_trades.py  management_documents.py  (+4 more)
tests/: test_config.py
tests/agents/: test_agent.py  test_big_five.py  test_four_ms_llm.py  test_llm_client.py  test_management_llm.py  test_quant_extras.py  test_sticker_price.py
tests/backtest/: test_engine.py  test_metrics.py
tests/data/: test_edgar.py  test_insider_trades.py  test_management_documents.py  test_options.py  test_pit_facts.py  test_prices.py  test_transcripts.py  test_universe.py
tests/dataset/: test_builder.py  test_labels.py
tests/evals/: test_confidence.py
tests/investors/: test_cusip_resolver.py  test_thirteen_f.py
tests/paper_trading/: test_cost_accounting.py  test_guardrails.py  test_ledger.py  test_orchestrator.py  test_tax.py  test_weekly_decision.py
tests/screening/: test_evidence.py  test_orchestrator.py
(+62 files in other folders)
